syntax = "proto3";
package musechain.musecore.fungible;

import "gogoproto/gogo.proto";
import "musechain/musecore/pkg/coin/coin.proto";
import "cosmos/msg/v1/msg.proto";

option go_package = "github.com/RWAs-labs/muse/x/fungible/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  rpc DeploySystemContracts(MsgDeploySystemContracts)
      returns (MsgDeploySystemContractsResponse);
  rpc DeployFungibleCoinMRC20(MsgDeployFungibleCoinMRC20)
      returns (MsgDeployFungibleCoinMRC20Response);
  rpc RemoveForeignCoin(MsgRemoveForeignCoin)
      returns (MsgRemoveForeignCoinResponse);
  rpc UpdateSystemContract(MsgUpdateSystemContract)
      returns (MsgUpdateSystemContractResponse);
  rpc UpdateContractBytecode(MsgUpdateContractBytecode)
      returns (MsgUpdateContractBytecodeResponse);
  rpc UpdateMRC20WithdrawFee(MsgUpdateMRC20WithdrawFee)
      returns (MsgUpdateMRC20WithdrawFeeResponse);
  rpc UpdateMRC20LiquidityCap(MsgUpdateMRC20LiquidityCap)
      returns (MsgUpdateMRC20LiquidityCapResponse);
  rpc PauseMRC20(MsgPauseMRC20) returns (MsgPauseMRC20Response);
  rpc UnpauseMRC20(MsgUnpauseMRC20) returns (MsgUnpauseMRC20Response);
  rpc UpdateGatewayContract(MsgUpdateGatewayContract)
      returns (MsgUpdateGatewayContractResponse);
  rpc UpdateMRC20Name(MsgUpdateMRC20Name) returns (MsgUpdateMRC20NameResponse);
}

message MsgDeploySystemContracts {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
}

message MsgDeploySystemContractsResponse {
  string uniswapV2Factory = 1;
  string wmuse = 2;
  string uniswapV2Router = 3;
  string connectorMEVM = 4;
  string systemContract = 5;
}

message MsgUpdateMRC20WithdrawFee {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string mrc20_address = 2; // mrc20 address
  string new_withdraw_fee = 6 [
    (gogoproto.customtype) = "cosmossdk.io/math.Uint",
    (gogoproto.nullable) = false
  ];
  string new_gas_limit = 7 [
    (gogoproto.customtype) = "cosmossdk.io/math.Uint",
    (gogoproto.nullable) = false
  ];
}

message MsgUpdateMRC20WithdrawFeeResponse {}

message MsgUpdateSystemContract {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string new_system_contract_address = 2;
}

message MsgUpdateSystemContractResponse {}

message MsgDeployFungibleCoinMRC20 {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string ERC20 = 2;
  int64 foreign_chain_id = 3;
  uint32 decimals = 4;
  string name = 5;
  string symbol = 6;
  pkg.coin.CoinType coin_type = 7;
  int64 gas_limit = 8;
  string liquidity_cap = 9 [
    (gogoproto.customtype) = "cosmossdk.io/math.Uint",
    (gogoproto.nullable) = true
  ];
}

message MsgDeployFungibleCoinMRC20Response { string address = 1; }

message MsgRemoveForeignCoin {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string mrc20_address = 2;
}

message MsgRemoveForeignCoinResponse {}

message MsgUpdateContractBytecode {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string contract_address = 2;
  string new_code_hash = 3;
}

message MsgUpdateContractBytecodeResponse {}

message MsgUpdateMRC20LiquidityCap {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string mrc20_address = 2;
  string liquidity_cap = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.Uint",
    (gogoproto.nullable) = false
  ];
}

message MsgUpdateMRC20LiquidityCapResponse {}

message MsgPauseMRC20 {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  repeated string mrc20_addresses = 2;
}

message MsgPauseMRC20Response {}

message MsgUnpauseMRC20 {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  repeated string mrc20_addresses = 2;
}

message MsgUnpauseMRC20Response {}

message MsgUpdateGatewayContract {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string new_gateway_contract_address = 2;
}

message MsgUpdateGatewayContractResponse {}

message MsgUpdateMRC20Name {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string mrc20_address = 2;
  string name = 3;
  string symbol = 4;
}

message MsgUpdateMRC20NameResponse {}
