syntax = "proto3";
package musechain.musecore.pkg.proofs.bitcoin;

option go_package = "github.com/RWAs-labs/muse/pkg/proofs/bitcoin";

message Proof {
  bytes tx_bytes = 1;
  bytes path = 2;
  uint32 index = 3;
}
